[gd_scene load_steps=2 format=3 uid="uid://dyj4stxffg3ff"]

[ext_resource type="Script" path="res://JSHConsoleUI.gd" id="1_grvsu"]

[node name="JSHConsoleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grvsu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OutputPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/OutputPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/OutputPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="InputContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="VBoxContainer/InputContainer"]
layout_mode = 2
text = ">"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type a command..."
caret_blink = true

[node name="AutocompletePanel" type="Panel" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ItemList" type="ItemList" parent="VBoxContainer/AutocompletePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_height = true
item_count = 3
item_0/text = "help"
item_1/text = "clear"
item_2/text = "list"